--- a/index.html
+++ b/index.html
@@ -42,29 +42,63 @@
         a:hover {
             color: #0056b3;
         }
+        #loading {
+            text-align: center;
+            font-style: italic;
+            color: #888;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>양순보 studio4</h1>
         <ul id="project-list">
-            </ul>
+            <li id="loading">목록을 불러오는 중...</li>
+        </ul>
     </div>
 
     <script>
         const projectList = document.getElementById('project-list');
         const totalProjects = 100;
+        const promises = [];
 
-        for (let i = 1; i <= totalProjects; i++) {
-            const listItem = document.createElement('li');
-            const link = document.createElement('a');
-
-            link.href = `text${i}.html`;
-            link.textContent = `설계 자료 ${i}`;
-
-            listItem.appendChild(link);
-            projectList.appendChild(listItem);
+        // 비동기 함수를 사용하여 각 파일의 제목을 가져옵니다.
+        async function fetchTitle(url) {
+            try {
+                const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const text = await response.text();
+                const parser = new DOMParser();
+                const doc = parser.parseFromString(text, 'text/html');
+                const title = doc.querySelector('title').textContent;
+                return title;
+            } catch (error) {
+                console.error(`Error fetching title for ${url}:`, error);
+                return `제목을 불러올 수 없음 (${url})`;
+            }
         }
+
+        async function createList() {
+            projectList.innerHTML = ''; // 기존 "로딩 중" 메시지 삭제
+
+            for (let i = 1; i <= totalProjects; i++) {
+                const url = `text${i}.html`;
+                const title = await fetchTitle(url);
+
+                const listItem = document.createElement('li');
+                const link = document.createElement('a');
+
+                link.href = url;
+                link.textContent = title;
+
+                listItem.appendChild(link);
+                projectList.appendChild(listItem);
+            }
+        }
+
+        createList();
     </script>
 </body>
 </html>
